구매자 후기 구현완료

--- a/src/main/resources/templates/review/CreateReviewFormToPurchaser.html
+++ b/src/main/resources/templates/review/CreateReviewFormToPurchaser.html
@@ -43,7 +43,7 @@
                     <div>
                         <div style="float: left">
                             <h3>최고의 거래였나요?</h3>
-                            <span th:text="${board.purchaserNickname}">댕이맘</span><span>님에 감사 인사도 남겨보세요:)</span><br>
+                            <span th:text="${board.purchaserNickname}"></span><span>님에 감사 인사도 남겨보세요:)</span><br>
                             <span>물론 감사 인사 없이도 보낼 수 있어요.</span>
                         </div>
                         <div style="float: right">
