--- a/src/main/resources/templates/purchase/InquirePurchaseList.html
+++ b/src/main/resources/templates/purchase/InquirePurchaseList.html
@@ -22,12 +22,17 @@
                                 </div>
                             </div>
                         </a>
-                        <div style="border-bottom: 1px solid orange; background-color: orange;">
-                            <a href="#" style="text-decoration: none">
+                        <div th:if="${!purchase.isSentReview}" style="background-color: orange;">
+                            <a th:href="@{/review/{boardId}/toSeller(boardId=${purchase.board.getId()})}" style="text-decoration: none">
                                 <div style="text-align: center; height: 30px; margin-top: 9px;">
                                     <span style="color: white">후기 보내기</span>
                                 </div>
                             </a>
+                        </div>
+                        <div th:if="${purchase.isSentReview}" style="background-color: gray; text-align: center">
+                            <button style="height: 39px; border: 0; outline: 0; background-color: transparent; color: white" disabled>
+                                후기작성 완료
+                            </button>
                         </div>
                     </th:block>
                 </ul>
