--- a/src/main/resources/templates/activity/InquireActivityList.html
+++ b/src/main/resources/templates/activity/InquireActivityList.html
@@ -27,6 +27,10 @@
                     채팅 등록
                     <span th:text="${newChatActivityList.size()}">0</span>
                 </a>
+                <a href="#" th:if="${newReviewActivityList.size() > 0}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                    후기 등록
+                    <span th:text="${newReviewActivityList.size()}">0</span>
+                </a>
             </ul>
         </div>
         <div class="col-9">
@@ -43,7 +47,7 @@
                 <ul class="list-group list-group-flush">
                     <a th:href="@{${boardActivity.link}}" th:each="boardActivity : ${newBoardActivityList}" class="list-group-item list-group-item-action">
                         <div>
-                            <small class="text-muted" style="float: left"><span th:text="|${boardActivity.receiverName}님이 |" style="color: #0090F9"></span>[[${boardActivity.message}]]</small><br>
+                            <small class="text-muted" style="float: left"><span th:text="|${boardActivity.receiverName}|" style="color: #0090F9"></span>님이 [[${boardActivity.message}]]</small><br>
                             <span style="float: left" th:text="${boardActivity.content}"></span>
                             <small class="fromNow text-muted" style="float: right" th:text="${boardActivity.diffCreatedAt}"></small>
                         </div>
@@ -58,7 +62,7 @@
                 <ul class="list-group list-group-flush">
                     <a th:href="@{${attentionActivity.link}}" th:each="attentionActivity : ${newAttentionActivityList}" class="list-group-item list-group-item-action">
                         <div>
-                            <small class="text-muted" style="float: left"><span th:text="|${attentionActivity.receiverName}님이 |" style="color: #0090F9"></span>[[${attentionActivity.message}]]</small><br>
+                            <small class="text-muted" style="float: left"><span th:text="|${attentionActivity.receiverName}|" style="color: #0090F9"></span>님이 [[${attentionActivity.message}]]</small><br>
                             <span style="float: left" th:text="${attentionActivity.content}"></span>
                             <small style="float: right" class="text-muted" th:text="${attentionActivity.diffCreatedAt}"></small>
                         </div>
@@ -73,7 +77,7 @@
                 <ul class="list-group list-group-flush">
                     <a th:href="@{${commentActivity.link}}" th:each="commentActivity : ${newCommentActivityList}" class="list-group-item list-group-item-action">
                         <div>
-                            <small class="text-muted" style="float: left"><span th:text="|${commentActivity.receiverName}님이 |" style="color: #0090F9"></span>[[${commentActivity.message}]]</small><br>
+                            <small class="text-muted" style="float: left"><span th:text="|${commentActivity.receiverName}|" style="color: #0090F9"></span>님이 [[${commentActivity.message}]]</small><br>
                             <span style="float: left" th:text="${commentActivity.content}"></span>
                             <small style="float: right" class="fromNow text-muted" th:text="${commentActivity.diffCreatedAt}"></small>
                         </div>
@@ -88,7 +92,7 @@
                 <ul class="list-group list-group-flush">
                     <a th:href="@{${likesActivity.link}}" th:each="likesActivity : ${newLikesActivityList}" class="list-group-item list-group-item-action">
                         <div>
-                            <small class="text-muted" style="float: left"><span th:text="|${likesActivity.receiverName}님이 |" style="color: #0090F9"></span>[[${likesActivity.message}]]</small>
+                            <small class="text-muted" style="float: left"><span th:text="|${likesActivity.receiverName}|" style="color: #0090F9"></span>님이 [[${likesActivity.message}]]</small>
                             <span style="float: left" th:text="${likesActivity.content}"></span>
                             <small style="float: right" class="fromNow text-muted" th:text="${likesActivity.diffCreatedAt}"></small>
                         </div>
@@ -103,9 +107,24 @@
                 <ul class="list-group list-group-flush">
                     <a th:href="@{${chatActivity.link}}" th:each="chatActivity : ${newChatActivityList}" class="list-group-item list-group-item-action">
                         <div>
-                            <small style="float: left" class="text-muted"><span th:text="${chatActivity.receiverName}" style="color: #0090F9"></span>[[${chatActivity.message}]]</small><br>
+                            <small style="float: left" class="text-muted"><span th:text="${chatActivity.receiverName}" style="color: #0090F9"></span>님이 [[${chatActivity.message}]]</small><br>
                             <span style="float: left" th:text="${chatActivity.content}"></span>
                             <small style="float: right" class="fromNow text-muted" th:text="${chatActivity.diffCreatedAt}"></small>
+                        </div>
+                    </a>
+                </ul>
+            </div>
+
+            <div class="card" style="margin-bottom: 20px;" th:if="${newReviewActivityList.size() > 0}">
+                <div class="card-header">
+                    판매상품에 후기를 등록했습니다.
+                </div>
+                <ul class="list-group list-group-flush">
+                    <a th:href="@{${reviewActivity.link}}" th:each="reviewActivity : ${newReviewActivityList}" class="list-group-item list-group-item-action">
+                        <div>
+                            <small style="float: left" class="text-muted"><span th:text="${reviewActivity.receiverName}" style="color: #0090F9"></span>님에게 [[${reviewActivity.message}]]</small><br>
+                            <span style="float: left" th:text="${reviewActivity.content}"></span>
+                            <small style="float: right" class="fromNow text-muted" th:text="${reviewActivity.diffCreatedAt}"></small>
                         </div>
                     </a>
                 </ul>
