게시글 내 채팅리스트 controller 위치 변경

--- a/src/main/resources/templates/board/InquireBoard.html
+++ b/src/main/resources/templates/board/InquireBoard.html
@@ -122,7 +122,7 @@
         let encryptBoardId = btoa(boardId.toString() + loginMemberId.toString() + boardMemberId.toString());
         $("#chatBtn").click(function () {
             if (loginMemberId === boardMemberId) {
-                $(location).attr("href", `/chatList/board/${boardId}`);
+                $(location).attr("href", `/board/${boardId}/chatList`);
             } else {
                 $(location).attr("href", `/board/${boardId}/chat?roomNum=${encryptBoardId}`);
             }
