--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -72,7 +72,7 @@
         <div class="container" style="margin-top: 30px;">
             <div style="float: left">
                 <p style="font-family: 'Jua', sans-serif; color :orange; font-size: 30px;">따듯한 거래를 시작해보세요~</p>
-                <small class="text-muted">지금 동네인증을 하고 안양시 동안구 근처 이웃 326,823명과 거래하세요.</small><br>
+                <small class="text-muted" th:text="|지금 동네인증을 하고 ${areaName} 근처 이웃 ${areaMemberCnt}명과 거래하세요.|"></small><br>
                 <small class="text-muted">동네 미인증시 서비스 이용이 제한될 수 있습니다.</small>
             </div>
             <div style="float: right">
