--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,7 @@
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container">
             <a class="navbar-brand" href="/">
-                <img src="https://img.icons8.com/emoji/48/000000/carrot-emoji.png"/>
+                <img src="https://img.icons8.com/emoji/48/000000/carrot-emoji.png" alt="daanngn"/>
             </a>
             <a href="/" style="text-decoration:none;font-family: 'Jua', sans-serif; color :orange; font-size: 30px; margin-right: 30px;">당근 마켓</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
