--- a/src/main/resources/templates/review/InquireSellerReviewList.html
+++ b/src/main/resources/templates/review/InquireSellerReviewList.html
@@ -37,7 +37,7 @@
                             <div style="float: left">
                                 <img th:src="${review.boardImage}" style="width: 80px; height: 80px; float: left; display: inline-block">
                                 <div style="margin-top: 10px; margin-left: 20px; display: inline-block">
-                                    <h4 style="display: inline-block" th:text="|${review.senderName}님이 따듯한 후기를 보냈어요.|"></h4><br>
+                                    <span style="color: orange; font-family: 'Jua', sans-serif; font-size: 20px; font-weight: bold;" th:text="|${review.senderName}님이 따뜻한 후기를 보냈어요.|"></span><br>
                                     <small style="" th:text="|${review.senderName}님과 ${review.boardTitle}를 거래했어요. 클릭하여 상세 후기를 확인해보세요.|"></small>
                                 </div>
                             </div>
