아이디 이메일 보내기 구현

--- a/src/main/resources/templates/member/LoginForm.html
+++ b/src/main/resources/templates/member/LoginForm.html
@@ -48,7 +48,9 @@
                                 로그인 상태 유지
                             </label>
                         </div>
-                        <a href="#!" class="text-body">비밀번호를 잊어버리셨나요?</a>
+                        <div class="mb-0">
+                            <span>아이디나 비밀번호를 잊었을 때는, <a href="/forget">여기</a>를 눌러주세요.</span>
+                        </div>
                     </div>
 
                     <div class="text-center text-lg-start mt-4 pt-2">
