--- a/src/main/resources/templates/member/ResetPasswordForm.html
+++ b/src/main/resources/templates/member/ResetPasswordForm.html
@@ -8,7 +8,7 @@
     <div class="input-form-background row">
         <div class="input-form mx-auto">
             <h4 class="mb-3">비밀번호 초기화</h4>
-            <form th:action="@{/password/reset/{encryptedUsername}(encryptedUsername=${encryptedUsername})}" method="post">
+            <form th:action="@{/password/reset/{encryptedData}(encryptedData=${encryptedData})}" method="post">
                 <div class="mb-5">
                     <label th:for="password">새 비밀번호</label>
                    <input type="password" class="form-control" th:id="password" th:name="password"  required>
