--- a/src/main/resources/templates/member/LoginForm.html
+++ b/src/main/resources/templates/member/LoginForm.html
@@ -4,6 +4,28 @@
 
 <header th:replace="fragments/header::header"></header>
 <body>
+
+<script th:inline="javascript">
+    /* <![CDATA[ */
+    var errorMessage = /*[[${errorMsg}]]*/
+    var successMessage = /*[[${successMsg}]]*/
+    /* ]]> */
+
+    if (errorMessage != null) {
+        Swal.fire({
+            title: 'Error',
+            html: errorMessage,
+            icon: "error"
+        });
+    } else if (successMessage != null) {
+        Swal.fire({
+            title: 'Success',
+            html: successMessage,
+            icon: 'success'
+        })
+    }
+</script>
+
     <div class="container">
         <div class="input-form-background row">
             <div class="input-form mx-auto">
