--- a/src/main/resources/templates/board/InquireOnSaleBoardList.html
+++ b/src/main/resources/templates/board/InquireOnSaleBoardList.html
@@ -43,7 +43,7 @@
     <div style="margin-left: 1440px;">
         <li class="nav-item dropdown" style="list-style: none;">
             <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" style="display: inline-block">
-                <img src="https://img.icons8.com/plumpy/24/null/menu-rounded.png" alt="menu"/>
+                <img src="https://img.icons8.com/?size=50&id=OTxpMqWbm71F&format=png&color=FD7E14" alt="menu"/>
             </a>
             <ul class="dropdown-menu" style="width: 330px;">
                 <li style="text-align: center">중고거래 카테고리</li>
